<?xml version="1.0"?>
<package format="2">
  <name>dynamixel_jointstate_conversion</name>
  <version>0.0.0</version>
  <description>The dynamixel_jointstate_conversion package converts dynamixel_msgs/JointState to sensor_msgs/JointState</description>

  <maintainer email="loy.vanbeek@gmail.com">Loy van Beek</maintainer>
  <author email="loy.vanbeek@gmail.com">Loy van Beek</author>

  <license>BSD</license>

  <url type="website">http://github.com/tue-robotics/dynamixel_jointstate_conversion</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamixel_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>dynamixel_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>dynamixel_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
